updated admin,category,products,user handlers
