# cmd/api/docs/swagger.json
@@ -2,7 +2,7 @@
     "swagger": "2.0",
     "info": {
         "description": "Show Times is an E-commerce platform to purchase Watch",
-        "title": "Go + Gin + Clean Architecture E-Commerce API Show Times",
+        "title": "Go + Gin E-Commerce API Show Times",
         "contact": {
             "name": "API Support"
         },
@@ -714,10 +714,17 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Product"
+                    "Product Management"
                 ],
                 "summary": "Edit product",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bearer Token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
                     {
                         "type": "integer",
                         "description": "Inventory ID of the product to update",
@@ -731,19 +738,31 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/domain.Product"
+                            "$ref": "#/definitions/models.ProductEdit"
                         }
                     }
                 ],
                 "responses": {
                     "200": {
-                        "description": "Product updated successfully",
+                        "description": "Success: Product updated successfully",
                         "schema": {
                             "$ref": "#/definitions/response.Response"
                         }
                     },
                     "400": {
                         "description": "Bad request: Invalid input or product update error",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized: Invalid or missing authentication",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error: Unable to update product",
                         "schema": {
                             "$ref": "#/definitions/response.Response"
                         }
@@ -1964,35 +1983,6 @@
                 }
             }
         },
-        "domain.Product": {
-            "type": "object",
-            "properties": {
-                "category": {
-                    "$ref": "#/definitions/domain.Category"
-                },
-                "category_id": {
-                    "type": "integer"
-                },
-                "color": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "price": {
-                    "type": "number"
-                },
-                "product_name": {
-                    "type": "string"
-                },
-                "stock": {
-                    "type": "integer"
-                },
-                "url": {
-                    "type": "string"
-                }
-            }
-        },
         "models.AddCart": {
             "type": "object",
             "properties": {
@@ -2099,6 +2089,29 @@
                     "type": "integer"
                 },
                 "payment_id": {
+                    "type": "integer"
+                }
+            }
+        },
+        "models.ProductEdit": {
+            "type": "object",
+            "properties": {
+                "category_id": {
+                    "type": "integer"
+                },
+                "color": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "price": {
+                    "type": "number"
+                },
+                "product_name": {
+                    "type": "string"
+                },
+                "stock": {
                     "type": "integer"
                 }
             }
